# symple_tasker

./: CMakeLists.txt  README.md  fileChangerForOutputTable.cpp  finalFIleChangerForOutputTable.cpp  main.cpp  outputTable.cpp  showTable.cpp
functions/sources/core/PathManager/: PathManager.cpp
functions/sources/core/Task/: Task.cpp
functions/sources/core/attachment/: attachment.cpp
functions/sources/core/base64/: base64.cpp
functions/sources/core/initializer/: initializer.cpp
functions/sources/core/inputhandler/: inputhandler.cpp
functions/sources/core/inputtask/: inputtask.cpp
functions/sources/core/outputtask/: outputtask.cpp
functions/sources/core/table/: table.cpp
functions/sources/core/taghandler/: taghandler.cpp
functions/sources/core/tasktraverser/: tasktraverser.cpp
functions/sources/core/visuals/: Visuals.cpp
functions/sources/crypto/aes128/: aes128.cpp
functions/sources/crypto/base64/: base64.cpp
headers/: PathManager.h  Task.h  Visuals.h  aes128.h  attachment.cpp  attachment.h  base64.h  initializer.h  inputhandler.h  inputtask.h  outputtask.h  table.h  taghandler.h  tasktraverser.h
